# triage-bot

./: .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  benchmark_summary.py  classification_benchmark.py  core_config.py  dev_tunnel.py  jira_action_executor.py  jira_issue_fetcher.py  jira_rest_paths.py  memory.md  openrouter_inference_client.py  prompt_composer.py  pyproject.toml  settings.py  specification.md  triage_api.py  triage_bulk_cli.py  triage_fallback.py  triage_handler.py  triage_manual_cli.py  triage_mismatch.py  triage_recommendation_parser.py
.cursor/commands/: architecture-audit.md  close-phase.md  configure-tooling.prompt.md  continue-development.md  git-init.prompt.md  make-specs.prompt.md  make-todo.prompt.md  ml-eda.prompt.md  ml-training.prompt.md
.cursor/rules/TDD/: RULE.md
.cursor/rules/development/: RULE.md
.cursor/rules/testing/: RULE.md
.cursor/skills/: db-connect.md
.github/workflows/: ci.yml
data/: issue_benchmark - actually a story.csv  issue_benchmark - correct bug, correct priority.csv  issue_benchmark - wrong priority.csv  issue_benchmark_dataset.csv
docs/architecture/: overview.md
docs/user_flows/: index.md
policy/: priority_definition.md
scripts/: fetch_jira_issue.py  fetch_jira_issue_image_context.py  run_bulk_triage_cli.py  run_container_smoke.sh  run_container_tunnel.sh  run_dev_tunnel.py  run_e2e_tests.sh  run_tests.sh  run_triage_cli.py  setup.sh
scripts/benchmark/: __init__.py  benchmark_summary.py  build_benchmark_dataset.py  classification_benchmark.py  run_classification_benchmark.py  summarize_benchmark_rows.py
src/jira_triage/: __init__.py
src/triage_service/: __init__.py
src/triage_service/adapters/: __init__.py  image_context_extractor.py  jira_action_executor.py  jira_comment_templates.json  jira_http_retry.py  jira_issue_fetcher.py  jira_jql_search.py  openrouter_inference_client.py  zendesk_ticket_fetcher.py
src/triage_service/api/: __init__.py  triage_api.py
src/triage_service/core/: __init__.py  issue_text_block.py  langfuse_prompt_config.py  policy_context.py  prompt_composer.py  prompt_templates.json  settings.py  triage_fallback.py  triage_handler.py  triage_mismatch.py  triage_recommendation_parser.py  vision_prompt_composer.py
src/triage_service/core/policy/: bug_definition.md  priority_definition.md
src/triage_service/observability/: __init__.py  audit_events.py  audit_store.py  langfuse_audit_store.py  langfuse_inference_tracing.py  log_payload_guard.py  observability_wiring.py  payload_redaction.py  runtime_logging.py  structured_logger_audit_store.py
tests/: conftest.py
tests/e2e/: test_e2e_placeholder.py
tests/fixtures/: triage_smoke_payload.json
tests/integration/: test_container_smoke_setup.py  test_openrouter_live_smoke.py  test_tooling_smoke.py
tests/lint/: test_ci_workflow.py  test_flake8.py
tests/unit/: test_audit_events.py  test_audit_store.py  test_benchmark_summary.py  test_classification_benchmark.py  test_core_config.py  test_dev_tunnel.py  test_fetch_jira_issue_script.py  test_health_endpoint.py  test_image_context_extractor.py  test_image_context_observability.py  test_image_context_wiring.py  test_issue_text_block.py  test_jira_action_executor.py  test_jira_adf_media.py  test_jira_http_retry.py  test_jira_issue_fetcher.py  test_jira_jql_search.py  test_jira_rest_paths.py  test_jira_triage_package.py  test_langfuse_audit_store.py  test_langfuse_inference_tracing.py  test_log_payload_guard.py  test_observability_wiring.py  test_openrouter_inference_client.py  test_package_layout.py  test_payload_redaction.py  test_policy_context.py  test_post_triage.py  test_prompt_composer.py  test_runtime_logging.py  test_settings.py  test_structured_logger_audit_store.py  test_triage_bulk_cli.py  test_triage_fallback.py  test_triage_handler.py  test_triage_inbound_debug.py  test_triage_manual_cli.py  test_triage_mismatch.py  test_triage_recommendation_parser.py  test_triage_sequential_parser.py  (+2 more)
