[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "core_config",
    "jira_issue_fetcher",
    "openrouter_inference_client",
    "policy_context",
    "prompt_composer",
    "settings",
    "triage_api",
    "triage_fallback",
    "triage_recommendation_parser",
]

[project]
name = "jira-triage"
version = "0.1.0"
description = "AI-assisted Jira triage for support-created issues"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "mypy>=1.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = [
    "unit: fast isolated unit tests",
    "integration: integration tests with mocks",
    "lint: lint checks run via pytest",
]

[tool.mypy]
python_version = "3.10"
strict = true
files = [
    "settings.py",
    "core_config.py",
    "jira_issue_fetcher.py",
    "openrouter_inference_client.py",
    "policy_context.py",
    "prompt_composer.py",
    "triage_api.py",
    "triage_fallback.py",
    "triage_recommendation_parser.py",
    "tests",
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
