[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = [
    "dev_tunnel",
    "triage_manual_cli",
]
packages = [
    "triage_service",
    "triage_service.api",
    "triage_service.core",
    "triage_service.adapters",
    "triage_service.observability",
]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
triage_service = ["core/prompt_templates.json", "core/policy/*.md"]

[project]
name = "jira-triage"
version = "0.1.0"
description = "AI-assisted Jira triage for support-created issues"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "httpx>=0.27",
    "tqdm>=4.66",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-dotenv>=1.0",
    "typing-extensions>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "flake8>=6.1",
    "mypy>=1.5",
    "uvicorn[standard]>=0.27",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "src"]
markers = [
    "unit: fast isolated unit tests",
    "integration: integration tests with mocks",
    "lint: lint checks run via pytest",
]

[tool.mypy]
python_version = "3.10"
strict = true
exclude = ["^build/"]
files = [
    "dev_tunnel.py",
    "src/triage_service/core/settings.py",
    "src/triage_service/adapters/jira_action_executor.py",
    "src/triage_service/adapters/jira_issue_fetcher.py",
    "src/triage_service/adapters/openrouter_inference_client.py",
    "src/triage_service/core/policy_context.py",
    "src/triage_service/core/prompt_composer.py",
    "src/triage_service/api/triage_api.py",
    "src/triage_service/core/triage_fallback.py",
    "src/triage_service/core/triage_handler.py",
    "src/triage_service/core/triage_mismatch.py",
    "triage_manual_cli.py",
    "src/triage_service/core/triage_recommendation_parser.py",
    "scripts/benchmark/classification_benchmark.py",
    "scripts/benchmark/benchmark_summary.py",
    "tests",
]
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[[tool.mypy.overrides]]
module = "tqdm.*"
ignore_missing_imports = true
